--- a/DIESB/DIESB.Web/Views/Home/Index.cshtml
+++ b/DIESB/DIESB.Web/Views/Home/Index.cshtml
@@ -13,42 +13,65 @@
 
 @if (Model != null)
 {
-    <br/>
-    <table class="table table-striped table-bordered table-condensed">
-        @foreach (var item in Model)
+    
+    if (Model.Any())
+    { 
+        <br/>
+        <table class="table table-striped table-bordered table-condensed">
+            <thead>
+                <tr>
+                    <td align="center"><b>Instituição</b></td>
+                    <td align="center"><b>Curso</b></td>
+                </tr>
+            </thead>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td style="text-align: justify">
+                        @Html.DisplayFor(modelItem => item.Instituicao.Descricao)
+                    </td>
+                    <td style="text-align: justify">
+                        @Html.DisplayFor(modelItem => item.ProgramaPosGraduacao.Descricao)
+                    </td>
+                    @*<td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                    </td>*@
+                </tr>
+            }
+
+        </table>
+        using(Html.BeginForm("Paginacao", "Home"))
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Instituicao.Descricao)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ProgramaPosGraduacao.Descricao)
-                </td>
-                @*<td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-                </td>*@
-            </tr>
+            <ul class="pagination">
+                @for (int i = 0; i < Model.FirstOrDefault().Count/200; i ++)
+                {
+                    <li><button class="btn btn-default" value="@(i + 1)" name="pagina" type="submit">
+                       @if ((Session["PAGINA"] == null && i == 0) || (Session["PAGINA"] != null && Session["PAGINA"].ToString() == (i + 1).ToString()))
+                       {
+                           <b>@(i + 1)</b>
+                       }
+                       else
+                       {
+                           @(i + 1)
+                       }
+                    </button></li>
+                }
+            </ul>
         }
-
-    </table>
-}
-
-else
-{
-
+    }
+    else
+    {
+        <br/>
+        <label>Nenhum curso encontrado</label>
+    }
+    
 }
 <hr />
-<p>Informações retiradas do site da CAPES - www.capes.org.br</p>
+<p>Informações retiradas do site da CAPES - <a href="http://www.capes.gov.br" target="_blank">http://www.capes.gov.br</a></p>
 
-
-@Scripts.Render("~/bundles/jquery")
+<script src="/Scripts/jquery-1.10.2.js"></script>
+<script src="/Scripts/bootstrap-select.js"></script>
 @Scripts.Render("~/bundles/bootstrap")
-@Scripts.Render("~/bundles/bootstrap-select")
-
-<script type="text/javascript">
-    $("document").ready(function () {
-        $('.selectpicker').selectpicker();
-    });
-</script>
+@Scripts.Render("~/Scripts/Load.js")
