--- a/DIESB/DIESB.Web/Views/Home/Pesquisa.cshtml
+++ b/DIESB/DIESB.Web/Views/Home/Pesquisa.cshtml
@@ -9,6 +9,6 @@
         }
     }
     <div class="input-group">
-        @Html.DropDownListFor(x => x.SelectedUF, listItems, "Estado", new { @class = "selectpicker" })@Html.TextBoxFor(x => x.Pesquisa, new { @class = "form-control", @placeholder = "Nome do programa de pós graduação" })<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        @Html.DropDownListFor(x => x.SelectedUF, listItems, (Session["UF"] == null || Session["UF"] == String.Empty) ? "Estado" : Session["UF"].ToString(), new { @class = "selectpicker" })@Html.TextBoxFor(x => x.Pesquisa, new { @class = "form-control", @placeholder = "Nome do programa de pós graduação" })<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
     </div>
 </form>
