--- a/DIESB/DIESB.Web/Views/Shared/_Layout.cshtml
+++ b/DIESB/DIESB.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>DIESB - Dados de Instituições de Ensino Sperior do Brasil</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Início", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Contato", "Contato", "Home", null, new { @class = "navbar-brand", @style = "margin-left: 10px" })
             </div>
         </div>
     </div>
